 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4114: Add Native operator to tez (daijy)

PIG-4117: Implement merge cogroup in Tez (daijy)

PIG-4119: Add message at end of each testcase with timestamp in Pig system tests (nmaheshwari via daijy)

PIG-4008: Pig code change to enable Tez Local mode (airbots via daijy)

PIG-4091: Predicate pushdown for ORC (rohini via daijy)

PIG-4077: Some fixes and e2e test for OrcStorage (rohini)

PIG-4054: Do not create job.jar when submitting job (daijy)

PIG-4047: Break up pig withouthadoop and fat jar (daijy)

PIG-4062: Add ascending order option to builtin TOP function (raj171 via cheolsoo)

PIG-3558: ORC support for Pig (daijy)

PIG-2122: Parameter Substitution doesn't work in the Grunt shell (daijy)

PIG-4031: Provide Counter aggregation for Tez (daijy)

PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4125: TEZ-1347 broke the build

PIG-4123: Increase memory for TezMiniCluster (daijy)

PIG-4122: Fix hadoopversion 23 compilation due to TEZ-1194 (daijy)

PIG-4061: Make Streaming UDF work in Tez (daijy)

PIG-4118: Fix hadoopversion 23 compilation due to TEZ-1237/TEZ-1407 (daijy)

PIG-4109: register local jar fail on Windows when Pig script is remote (daijy)

PIG-4116: Update Pig doc about Hadoop 2 Streaming Python UDF support (cheolsoo)
