@@ -565,3 +565,30 @@ hcat.bin=/usr/local/hcat/bin/hcat
 # you encounter some bug in automatic parallelism. If set to false, use 1 as
 # default parallelism
 pig.tez.auto.parallelism=true
+
+###########################################################################
+#
+# Streaming properties
+#
+
+# Define what properties will be set in the streaming environment. Just set this
+# property to a comma-delimited list of properties to set, and those properties
+# will be set in the environment.
+#
+# pig.streaming.environment=<comma-delimited list of propertes>
+
+# Specify a comma-delimited list of local files to ship to distributed cache for
+# streaming job.
+#
+# pig.streaming.ship.files=<comma-delimited list of local files>
+
+# Specify a comma-delimited list of remote files to cache on distributed cache
+# for streaming job.
+#
+# pig.streaming.cache.files=<comma-delimited list of remote files>
+
+# Specify the python command to be used for python streaming udf. By default,
+# python is used, but you can overwrite it with a non-default version such as
+# python2.7.
+#
+# pig.streaming.udf.python.command=python
